Ensure default input arrows are hidden on firefox

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -28,6 +28,10 @@
     -webkit-appearance: none;
     margin: 0;
   }
+  input[type="number"] {
+    -moz-appearance: textfield; /* Firefox */
+    appearance: textfield;
+  }
 }
 
 @layer components {
